--- a/slideControl.css
+++ b/slideControl.css
@@ -1,3 +1,12 @@
+html{
+    -webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 .slideControlContainer {
 	height:10px; 
 	background: #efefef; /* Old browsers */
